--- a/release/manifest.json
+++ b/release/manifest.json
@@ -4,18 +4,11 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "permissions": [
-    "https://api.bap-sm.or.id/",
-    "http://api.bap-sm.lo"
+    "https://api.bap-sm.or.id/"
   ],
-  "background": {
-    "scripts": [
-      "js/vendor/angular/angular.min.js",
-      "js/vendor/angular/angular-animate.min.js",
-      "js/vendor/angular-ui/angular-ui-router.min.js"
-    ]
-  },
-  "content_security_policy": "script-src 'self'; object-src 'self'",
-  "chrome_url_overrides" : {
-    "newtab": "tab.html"
+  "app" : {
+    "background": {
+      "scripts": [ "background.js" ]
+    }
   }
 }
