--- a/release/manifest.json
+++ b/release/manifest.json
@@ -4,11 +4,12 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "permissions": [
+    "storage",
     "https://api.bap-sm.or.id/"
   ],
   "app" : {
     "background": {
-      "scripts": [ "background.js" ]
+      "scripts": [ "background.js"]
     }
   }
 }
