wrap to webstore

--- a/release/manifest.json
+++ b/release/manifest.json
@@ -1,12 +1,18 @@
 {
   "name": "Alpha",
   "description": "Aplikasi client sistem akreditasi online",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
+  "minimum_chrome_version": "33",
   "permissions": [
     "storage",
     "https://api.bap-sm.or.id/"
   ],
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "app" : {
     "background": {
       "scripts": [ "background.js"]
