--- a/release/bower.json
+++ b/release/bower.json
@@ -11,8 +11,7 @@
     "ionicons":             "2.0.1",
     "jquery":               "2.1.3",
     "taffydb":              "https://github.com/typicaljoe/taffydb/archive/master.zip",
-    "angular-validation":   "https://github.com/ghiscoding/angular-validation/archive/master.zip",
-    "json":                 "https://github.com/douglascrockford/JSON-js/archive/master.zip"
+    "angular-validation":   "https://github.com/ghiscoding/angular-validation/archive/master.zip"
   },
   "resolutions": {
     "angular": "^1.3.15"
