--- a/release/bower.json
+++ b/release/bower.json
@@ -1,19 +1,22 @@
 {
-  "name":       "Alpha",
-  "version":    "0.0.1",
+  "name": "Alpha",
+  "version": "0.0.1",
   "devDependencies": {
-    "angular":              "1.3.15",
-    "angular-sanitize":     "1.3.15",
-    "angular-animate":      "1.3.15",
-    "angular-ui-router":    "0.2.13",
-    "angular-bootstrap":    "0.12.1",
-    "bootstrap":            "3.3.4",
-    "ionicons":             "2.0.1",
-    "jquery":               "2.1.3",
-    "taffydb":              "https://github.com/typicaljoe/taffydb/archive/master.zip",
-    "angular-validation":   "https://github.com/ghiscoding/angular-validation/archive/master.zip"
+    "angular": "1.3.15",
+    "angular-sanitize": "1.3.15",
+    "angular-animate": "1.3.15",
+    "angular-ui-router": "0.2.13",
+    "angular-bootstrap": "0.12.1",
+    "bootstrap": "3.3.4",
+    "ionicons": "2.0.1",
+    "jquery": "2.1.3",
+    "taffydb": "https://github.com/typicaljoe/taffydb/archive/master.zip",
+    "angular-validation": "https://github.com/ghiscoding/angular-validation/archive/master.zip"
   },
   "resolutions": {
     "angular": "^1.3.15"
+  },
+  "dependencies": {
+    "angular-validation": "~1.3.0"
   }
 }
