--- a/release/bower.json
+++ b/release/bower.json
@@ -11,7 +11,8 @@
     "ionicons": "2.0.1",
     "jquery": "2.1.3",
     "taffydb": "https://github.com/typicaljoe/taffydb/archive/master.zip",
-    "angular-validation": "https://github.com/ghiscoding/angular-validation/archive/master.zip"
+    "angular-validation": "1.3.0",
+    "datetimepicker": "https://github.com/CuriousSolutions/DateTimePicker.git#0.1.1"
   },
   "resolutions": {
     "angular": "^1.3.15"
