--- a/release/bower.json
+++ b/release/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "3.3.4",
     "ionicons": "2.0.1",
     "jquery": "2.1.3",
+    "angular-file-upload": "1.1.5",
     "taffydb": "https://github.com/typicaljoe/taffydb/archive/master.zip",
     "angular-validation": "1.3.0",
     "datetimepicker": "https://github.com/CuriousSolutions/DateTimePicker.git#0.1.1"
