--- a/release/bower.json
+++ b/release/bower.json
@@ -13,7 +13,8 @@
     "angular-file-upload": "1.1.5",
     "taffydb": "https://github.com/typicaljoe/taffydb/archive/master.zip",
     "angular-validation": "1.3.0",
-    "datetimepicker": "https://github.com/CuriousSolutions/DateTimePicker.git#0.1.1"
+    "datetimepicker": "https://github.com/CuriousSolutions/DateTimePicker.git#0.1.1",
+    "cropit": "0.4.1"
   },
   "resolutions": {
     "angular": "^1.3.15"
