--- a/release/manifest.json
+++ b/release/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Akreditasi Sekolah dan Madrasah - BAP PROVINSI",
+  "name": "Akreditasi Client",
   "description": "Aplikasi client sistem akreditasi online sekolah/madrasah di Indonesia",
   "version": "0.0.3",
   "manifest_version": 2,
